# storage/api-docs/api-docs.json
@@ -302,6 +302,263 @@
                 }
             }
         },
+        "/products": {
+            "get": {
+                "tags": [
+                    "Product"
+                ],
+                "summary": "View all products",
+                "description": "View all products",
+                "operationId": "products.index",
+                "responses": {
+                    "200": {
+                        "description": "Successful operation"
+                    },
+                    "400": {
+                        "description": "Bad Request"
+                    },
+                    "401": {
+                        "description": "Unauthenticated"
+                    },
+                    "403": {
+                        "description": "Forbidden"
+                    },
+                    "422": {
+                        "description": "Unprocessable Entity"
+                    },
+                    "500": {
+                        "description": "Internal server error"
+                    }
+                }
+            }
+        },
+        "/product/create": {
+            "post": {
+                "tags": [
+                    "Product"
+                ],
+                "summary": "create a new product",
+                "description": "create new product",
+                "operationId": "products.store",
+                "requestBody": {
+                    "description": "Pass product information",
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "properties": {
+                                    "category_uuid": {
+                                        "type": "string",
+                                        "example": "a5da1fb0-fc09-359a-86dc-6b7983e7b693"
+                                    },
+                                    "title": {
+                                        "type": "string",
+                                        "example": "New Pet Food"
+                                    },
+                                    "price": {
+                                        "type": "string",
+                                        "example": "256.88"
+                                    },
+                                    "description": {
+                                        "type": "string",
+                                        "example": "About New Pet Food"
+                                    },
+                                    "metadata": {
+                                        "type": "string",
+                                        "example": "{'image': 'string','brand': 'string'}"
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "Successful operation"
+                    },
+                    "400": {
+                        "description": "Bad Request"
+                    },
+                    "401": {
+                        "description": "Unauthenticated"
+                    },
+                    "403": {
+                        "description": "Forbidden"
+                    },
+                    "422": {
+                        "description": "Unprocessable Entity"
+                    },
+                    "500": {
+                        "description": "Internal server error"
+                    }
+                },
+                "security": [
+                    {
+                        "bearer_token": []
+                    }
+                ]
+            }
+        },
+        "/product/{uuid}": {
+            "get": {
+                "tags": [
+                    "Product"
+                ],
+                "summary": "fetch a product ",
+                "description": "fetch a product",
+                "operationId": "products.show",
+                "parameters": [
+                    {
+                        "name": "uuid",
+                        "in": "path",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Successful operation"
+                    },
+                    "400": {
+                        "description": "Bad Request"
+                    },
+                    "401": {
+                        "description": "Unauthenticated"
+                    },
+                    "403": {
+                        "description": "Forbidden"
+                    },
+                    "422": {
+                        "description": "Unprocessable Entity"
+                    },
+                    "500": {
+                        "description": "Internal server error"
+                    }
+                }
+            },
+            "put": {
+                "tags": [
+                    "Product"
+                ],
+                "summary": "update a product",
+                "description": "update a product",
+                "operationId": "products.update",
+                "parameters": [
+                    {
+                        "name": "uuid",
+                        "in": "path",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                ],
+                "requestBody": {
+                    "description": "Pass product information",
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "properties": {
+                                    "category_uuid": {
+                                        "type": "string",
+                                        "example": "a5da1fb0-fc09-359a-86dc-6b7983e7b693"
+                                    },
+                                    "title": {
+                                        "type": "string",
+                                        "example": "New Pet Food"
+                                    },
+                                    "price": {
+                                        "type": "string",
+                                        "example": "256.88"
+                                    },
+                                    "description": {
+                                        "type": "string",
+                                        "example": "About New Pet Food"
+                                    },
+                                    "metadata": {
+                                        "type": "string",
+                                        "example": "{'image': 'string','brand': 'string'}"
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "Successful operation"
+                    },
+                    "400": {
+                        "description": "Bad Request"
+                    },
+                    "401": {
+                        "description": "Unauthenticated"
+                    },
+                    "403": {
+                        "description": "Forbidden"
+                    },
+                    "422": {
+                        "description": "Unprocessable Entity"
+                    },
+                    "500": {
+                        "description": "Internal server error"
+                    }
+                },
+                "security": [
+                    {
+                        "bearer_token": []
+                    }
+                ]
+            },
+            "delete": {
+                "tags": [
+                    "Product"
+                ],
+                "summary": "delete a product",
+                "description": "delete a product",
+                "operationId": "products.delete",
+                "parameters": [
+                    {
+                        "name": "uuid",
+                        "in": "path",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Successful operation"
+                    },
+                    "400": {
+                        "description": "Bad Request"
+                    },
+                    "401": {
+                        "description": "Unauthenticated"
+                    },
+                    "403": {
+                        "description": "Forbidden"
+                    },
+                    "422": {
+                        "description": "Unprocessable Entity"
+                    },
+                    "500": {
+                        "description": "Internal server error"
+                    }
+                },
+                "security": [
+                    {
+                        "bearer_token": []
+                    }
+                ]
+            }
+        },
         "/user": {
             "get": {
                 "tags": [
